<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- home strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="e_mail__string">E-mail:</string>
    <string name="senha__string">Senha:</string>
    <string name="entrar_string">Entrar</string>
    <string name="_______________string">*************</string>
    <string name="exemplo_exemplo_com_br_string">exemplo@exemplo.com.br</string>
    <string name="_criar_conta_string">Criar Conta</string>
    <string name="nome_respons_vel__string">Nome Responsvel:</string>
    <string name="telefone__string">Telefone:</string>
    <string name="endere_o__string">Endereo:</string>
    <string name="cep__string">CEP:</string>
    <string name="cpf__string">CPF:</string>
    <string name="_pr_ximo_string">PRXIMO</string>
    <string name="nome__string">Nome:</string>
    <string name="cpf__ek1_string">CPF:</string>
    <string name="endere_o__ek1_string">Endereo:</string>
    <string name="adicionar_protegido_string">Adicionar Protegido</string>
    <string name="adicionar_protegido_ek1_string">Adicionar Protegido</string>
    <string name="_pr_ximo_ek1_string">PRXIMO</string>
    <string name="nome__ek1_string">Nome:</string>
    <string name="cpf__ek2_string">CPF:</string>
    <string name="endere_o__ek2_string">Endereo:</string>
    <string name="v__maria_string">V Maria</string>
    <string name="rusovas___ems_string">Rusovas - EMS</string>
    <string name="_1_comprimido___10mg___branco_string">1 Comprimido - 10mg - Branco</string>
    <string name="_10_15_string">10:15</string>
    <string name="__colesterol_string">*Colesterol</string>
    <string name="v__clara_string">V Clara</string>
    <string name="rusovas___ems_ek1_string">Rusovas - EMS</string>
    <string name="_1_comprimido___10mg___branco_ek1_string">1 Comprimido - 10mg - Branco</string>
    <string name="_10_15_ek1_string">10:15</string>
    <string name="__colesterol_ek1_string">*Colesterol</string>
    <string name="_sair_string">Sair</string>
    <string name="_config__string">Config.</string>
    <string name="nome__ek2_string">Nome:</string>
    <string name="cpf__ek3_string">CPF:</string>
    <string name="endere_o__ek3_string">Endereo:</string>
    <string name="v__maria_ek1_string">V Maria</string>
    <string name="rusovas___ems_ek2_string">Rusovas - EMS</string>
    <string name="_1_comprimido___10mg___branco_ek2_string">1 Comprimido - 10mg - Branco</string>
    <string name="_10_15_ek2_string">10:15</string>
    <string name="__colesterol_ek2_string">*Colesterol</string>
    <string name="v__clara_ek1_string">V Clara</string>
    <string name="rem_dio_consumido_string">Remdio Consumido</string>
    <string name="sair_ek1_string">Sair</string>
    <string name="config__ek1_string">Config.</string>
    <string name="nome__ek3_string">Nome:</string>
    <string name="cpf__ek4_string">CPF:</string>
    <string name="endere_o__ek4_string">Endereo:</string>
    <string name="sa_de_do_paciente_string">Sade do Paciente</string>
    <string name="tem_problema_do_cora__o__string">Tem problema do corao?</string>
    <string name="tem_diabetes__string">Tem diabetes?</string>
    <string name="tem_dst__string">Tem DST?</string>
    <string name="tem_press_o_alta__string">Tem presso alta?</string>
    <string name="sim_string">Sim </string>
    <string name="sim_ek1_string">Sim </string>
    <string name="sim_ek2_string">Sim </string>
    <string name="sim_ek3_string">Sim </string>
    <string name="n_o_string">No</string>
    <string name="n_o_ek1_string">No</string>
    <string name="n_o_ek2_string">No</string>
    <string name="n_o_ek3_string">No</string>
    <string name="_pr_ximo_ek2_string">PRXIMO</string>
    <string name="nome__ek4_string">Nome:</string>
    <string name="cpf__ek5_string">CPF:</string>
    <string name="endere_o__ek5_string">Endereo:</string>
    <string name="sa_de_do_paciente_ek1_string">Sade do Paciente</string>
    <string name="adicionar_receita_string">Adicionar Receita</string>
    <string name="adicionar_rem_dio_string">Adicionar Remdio</string>
    <string name="adicionar_quantidade_de_comprimido_string">Adicionar Quantidade de Comprimido</string>
    <string name="adicionar_hor_rio_string">Adicionar Horrio</string>
    <string name="___string">:</string>
    <string name="_finalizar_string">Finalizar</string>
    <string name="nome_paciente__string">Nome Paciente:</string>
    <string name="telefone__ek1_string">Telefone:</string>
    <string name="endere_o__ek6_string">Endereo:</string>
    <string name="cep__ek1_string">CEP:</string>
    <string name="cpf__ek6_string">CPF:</string>
    <string name="data_de_nascimento__string">Data de Nascimento:</string>
    <string name="_pr_ximo_ek3_string">PRXIMO</string>
    <string name="finalizar">Finalizar</string>
    <string name="rectangle_9">rectangle_9</string>
    <string name="receita_m_dica">Receita médica</string>
    <string name="_12_00">12:00</string>
    <string name="sa_de_do_protegido">Saúde do Protegido</string>
    <string name="saude_1">saude_1</string>
    <string name="fone">Fone:</string>
    <string name="homem_perfil_caricatura_18591_58482_1">homem_perfil_caricatura_18591_58482_1</string>
    <string name="quantidade">Quantidade</string>
    <string name="medicamento">Medicamento</string>
    <string name="pr_ximo">Próximo</string>
    <string name="endere_o">Endereço</string>
    <string name="cpf_opcional">CPF:(Opcional)</string>
    <string name="nome_protegido">Nome Protegido</string>
    <string name="rua_senex_20">Rua senex, 20</string>
    <string name="_00000_000">00000 - 000</string>
    <string name="_123_456_789_01">123.456.789.01</string>
    <string name="_00_0000_0000">(00) 0000 - 0000</string>
    <string name="algenor">Algenor</string>
    <string name="homem_perfil_caricatura_18591_58482_1_ek6">homem_perfil_caricatura_18591_58482_1_ek6</string>
    <string name="telefone_somente_n_mero">Telefone(Somente número):</string>
    <string name="senha">Senha</string>
    <string name="email">Email:</string>
    <string name="cpf_opcional2">CPF(Opcional):</string>
    <string name="nome_respons_vel">Nome responsável:</string>
    <string name="criar">Criar</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="digite_sua_senha">Digite sua senha...</string>
    <string name="digite_seu_nome_de_usu_rio">Digite seu nome de usuário...</string>
    <string name="entrar">Entrar</string>
    <string name="user_icon">user_icon_</string>
</resources>