<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/cor_de_fundo"
	tools:layout_editor_absoluteX="3dp"
	tools:layout_editor_absoluteY="-22dp">

	<Button
		android:id="@+id/endButton1_4"
		android:layout_width="152dp"
		android:layout_height="48dp"
		android:layout_marginStart="214dp"
		android:layout_marginTop="10dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_1_shape"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/finalizar"
		android:textColor="@color/_bg__home_ek2_color"
		android:textSize="26sp"
		app:layout_constraintEnd_toEndOf="@+id/rectangle_9"
		app:layout_constraintStart_toStartOf="@+id/rectangle_9"
		app:layout_constraintTop_toBottomOf="@+id/rectangle_9" />

	<ImageView
		android:id="@+id/rectangle_9"
		android:layout_width="366dp"
		android:layout_height="470dp"
		android:layout_marginTop="21dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_1_shape"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.481"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/titleText"
		android:contentDescription="@string/rectangle_9" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/receitaBox"
		android:layout_width="284dp"
		android:layout_height="90dp"
		android:layout_marginTop="24dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_24"
		android:gravity="center"
		android:hint="@string/receita_m_dica"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="26sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/rectangle_9" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/timeBox"
		android:layout_width="284dp"
		android:layout_height="90dp"
		android:layout_marginTop="26dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_24"
		android:gravity="center"
		android:hint="@string/_12_00"
		android:inputType="time"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="26sp"
		app:layout_constraintEnd_toEndOf="@+id/receitaBox"
		app:layout_constraintStart_toStartOf="@+id/receitaBox"
		app:layout_constraintTop_toBottomOf="@+id/receitaBox" />

	<TextView
		android:id="@+id/titleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginTop="40dp"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/sa_de_do_protegido"
		android:textColor="@color/white"
		android:textSize="26sp"
		app:layout_constraintStart_toEndOf="@+id/saude_1"
		app:layout_constraintTop_toBottomOf="@+id/phone1_4" />

	<ImageView
		android:id="@+id/saude_1"
		android:layout_width="42dp"
		android:layout_height="43dp"
		android:layout_marginStart="28dp"
		android:layout_marginTop="18dp"
		android:src="@drawable/saude_1"
		app:layout_constraintStart_toStartOf="@+id/homem_perfil_caricatura_18591_58482_"
		app:layout_constraintTop_toBottomOf="@+id/homem_perfil_caricatura_18591_58482_"
		android:contentDescription="@string/saude_1" />

	<TextView
		android:id="@+id/cpf1_4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginTop="12dp"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/cpf__string"
		android:textColor="@color/white"
		android:textSize="19sp"
		app:layout_constraintStart_toStartOf="@+id/nome1_4"
		app:layout_constraintTop_toBottomOf="@+id/nome1_4" />

	<TextView
		android:id="@+id/phone1_4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginTop="12dp"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/fone"
		android:textColor="@color/white"
		android:textSize="19sp"
		app:layout_constraintStart_toStartOf="@+id/cpf1_4"
		app:layout_constraintTop_toBottomOf="@+id/cpf1_4" />

	<TextView
		android:id="@+id/nome1_4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginStart="12dp"
		android:layout_marginTop="52dp"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/nome__string"
		android:textColor="@color/white"
		android:textSize="19sp"
		app:layout_constraintStart_toEndOf="@+id/homem_perfil_caricatura_18591_58482_"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/homem_perfil_caricatura_18591_58482_"
		android:layout_width="121dp"
		android:layout_height="118dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="52dp"
		android:contentDescription="@string/homem_perfil_caricatura_18591_58482_1"
		android:src="@drawable/homem_perfil_caricatura_18591_58482_1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/qtBox"
		android:layout_width="284dp"
		android:layout_height="90dp"
		android:layout_marginTop="25dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_24"
		android:gravity="center"
		android:hint="@string/quantidade"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="26sp"
		app:layout_constraintEnd_toEndOf="@+id/medBox"
		app:layout_constraintStart_toStartOf="@+id/medBox"
		app:layout_constraintTop_toBottomOf="@+id/medBox" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/medBox"
		android:layout_width="284dp"
		android:layout_height="90dp"
		android:layout_marginTop="26dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_24"
		android:gravity="center"
		android:hint="@string/medicamento"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="26sp"
		app:layout_constraintEnd_toEndOf="@+id/timeBox"
		app:layout_constraintStart_toStartOf="@+id/timeBox"
		app:layout_constraintTop_toBottomOf="@+id/timeBox" />
</androidx.constraintlayout.widget.ConstraintLayout>