<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/cor_de_fundo">

	<Button
		android:id="@+id/nextButton"
		android:layout_width="146dp"
		android:layout_height="48dp"
		android:layout_marginStart="248dp"
		android:layout_marginTop="732dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_1_shape"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/pr_ximo"
		android:textColor="@color/_bg__home_ek2_color"
		android:textSize="26sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/cep1_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginStart="8dp"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/cep__ek1_string"
		android:textColor="@color/_bg__home_ek2_color"
		android:textSize="26sp"
		app:layout_constraintBottom_toTopOf="@+id/cepBox1_2"
		app:layout_constraintStart_toStartOf="@+id/cepBox1_2" />

	<TextView
		android:id="@+id/adress1_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginStart="8dp"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/endere_o"
		android:textColor="@color/_bg__home_ek2_color"
		android:textSize="26sp"
		app:layout_constraintBottom_toTopOf="@+id/adressBox"
		app:layout_constraintStart_toStartOf="@+id/adressBox" />

	<TextView
		android:id="@+id/telefone1_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginStart="8dp"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/telefone__ek1_string"
		android:textColor="@color/_bg__home_ek2_color"
		android:textSize="26sp"
		app:layout_constraintBottom_toTopOf="@+id/telefoneBox1_2"
		app:layout_constraintStart_toStartOf="@+id/telefoneBox1_2" />

	<TextView
		android:id="@+id/cpf1_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginStart="8dp"
		android:layout_marginBottom="4dp"
		android:gravity="center"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/cpf_opcional"
		android:textColor="@color/_bg__home_ek2_color"
		android:textSize="26sp"
		app:layout_constraintBottom_toTopOf="@+id/cpfBox1_2"
		app:layout_constraintStart_toStartOf="@+id/cpfBox1_2" />

	<TextView
		android:id="@+id/nome1_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/nome_protegido"
		android:textColor="@color/_bg__home_ek2_color"
		android:textSize="26sp"
		app:layout_constraintBottom_toTopOf="@+id/nomeBox1_2"
		app:layout_constraintStart_toStartOf="@+id/nomeBox1_2" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/cepBox1_2"
		android:layout_width="373dp"
		android:layout_height="51dp"
		android:layout_marginStart="4dp"
		android:layout_marginTop="52dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_1_shape"
		android:gravity="center"
		android:hint="@string/_00000_000"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="25sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/adressBox" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/adressBox"
		android:layout_width="373dp"
		android:layout_height="51dp"
		android:layout_marginStart="6dp"
		android:layout_marginTop="39dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_1_shape"
		android:gravity="center"
		android:hint="@string/rua_senex_20"
		android:inputType="textPostalAddress"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="25sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/telefoneBox1_2" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/telefoneBox1_2"
		android:layout_width="373dp"
		android:layout_height="51dp"
		android:layout_marginStart="6dp"
		android:layout_marginTop="44dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_1_shape"
		android:gravity="center"
		android:hint="@string/_00_0000_0000"
		android:inputType="phone"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="25sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cpfBox1_2" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/cpfBox1_2"
		android:layout_width="373dp"
		android:layout_height="51dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="49dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_1_shape"
		android:gravity="center"
		android:hint="@string/_123_456_789_01"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="25sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nomeBox1_2" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/nomeBox1_2"
		android:layout_width="373dp"
		android:layout_height="51dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="39dp"
		android:alpha="0.60000002384186"
		android:background="@drawable/rectangle_1_shape"
		android:gravity="center"
		android:hint="@string/algenor"
		android:inputType="text"
		android:textColor="@color/white"
		android:textColorHint="@color/white"
		android:textSize="25sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/homem_perfil_caricatura_18591_58482_1_ek6" />

	<ImageView
		android:id="@+id/homem_perfil_caricatura_18591_58482_1_ek6"
		android:layout_width="121dp"
		android:layout_height="118dp"
		android:layout_marginTop="80dp"
		android:contentDescription="@string/homem_perfil_caricatura_18591_58482_1_ek6"
		android:src="@drawable/homem_perfil_caricatura_18591_58482_1_ek6"
		app:layout_constraintBottom_toTopOf="@+id/nome1_2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>